# agentic-tools

./: .gitignore  AGENTS.md  Justfile  README.md  llm_models.txt  main.py  pyproject.toml  sync.rad
.iteratr/data/jetstream/$G/streams/iteratr_events/: meta.inf  meta.sum
.iteratr/data/jetstream/$G/streams/iteratr_events/msgs/: 1.blk  index.db
.iteratr/data/jetstream/$G/streams/iteratr_events/obs/2WJRb2uS/: meta.inf  meta.sum
.iteratr/data/jetstream/$G/streams/iteratr_events/obs/2mbA4418/: meta.inf  meta.sum
.iteratr/data/jetstream/$G/streams/iteratr_events/obs/ECX07kap/: meta.inf  meta.sum
.iteratr/data/jetstream/$G/streams/iteratr_events/obs/lw4kD3p2/: meta.inf  meta.sum
.iteratr/data/jetstream/$G/streams/iteratr_events/obs/ozP6t1Hp/: meta.inf  meta.sum
.serena/: .gitignore  project.yml
automations/markdown-frontmatter/: README.md  markdown-frontmatter.py
automations/recording-processor/: PLAN.md  README.md  recording-processor.py
automations/recording_processor/: recording-processor-job.nu  recording_processor.py
automations/toc_generator/: toc_generator.py
skills/deploying-with-mpremote/: SKILL.md
skills/managing-circuitpython-libraries/: SKILL.md
skills/mdq/: SKILL.md
test/data/transcriptions/transcription-2026-02-09-065011/: chunks.jsonl  manifest.json  segments.jsonl
test/data/transcriptions/transcription-2026-02-09-065028/: chunks.jsonl  manifest.json  segments.jsonl
tests/: test_recording_transcribe.py
